[package]
name = "mocktoffel"
description = "easy to use mocking library with minimal boilerplate"
version = "0.1.0"
edition = "2021"
rust-version = "1.70.0"
documentation = "https://docs.rs/mocktoffel"
categories = ["development-tools::testing"]
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.56"
quote = "1.0.26"
syn = { version = "2.0.13", features = ["full", "extra-traits", "parsing"] }

[dev-dependencies]
assert_proc = { path = "../assert_proc" }

